# simpleord

./: Cargo.toml
src/: lib.rs
